# ocr-pdf-rust

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-amd64  compose.yaml
api/: Cargo.toml
api/src/: main.rs
console_app/: Cargo.toml
console_app/src/: main.rs
ocr_pdf/: Cargo.toml
ocr_pdf/src/: lib.rs  models.rs  ocr_my_pdf.rs  ocr_processor.rs
