[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum =  { version =  "0.7.9", features = ["multipart"] }
ocr_pdf = { path = "../ocr_pdf" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["compression-full", "trace"] }
tracing = "0.1.41"
chrono = "0.4.38"
tower = "0.5.2"
